--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "compile": "tsc --watch",
+    "doc": "typedoc",
     "prepack": "tsc",
-    "test": "jest src **/*.test.js"
+    "test": "jest"
   },
   "files": [
     "dist/**/*"
@@ -27,6 +28,7 @@
     "@types/node": "^16.4.11",
     "dotenv": "^10.0.0",
     "jest": "^27.0.6",
+    "typedoc": "^0.21.5",
     "typescript": "^4.3.5"
   },
   "engines": {
