--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gsotp",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "gsotp.com node.js library",
   "main": "dist/index.js",
   "scripts": {
     "compile": "tsc --watch",
     "doc:serve": "typedoc --watch",
-    "doc:deploy": "typedoc && cd docs && git add . && git push",
+    "doc:deploy": "typedoc && cd docs && git add . && git commit && git push",
     "prepack": "tsc",
     "test": "jest"
   },
